# bos-post-bot-rs

./: Cargo.toml  GetUserActionsByUserId.gql  build.sh  nano_timestamp  schema.graphql  squidward-1.near_receive_rewards.xlsx  user-mint-times.json
src/: main.rs  post.rs  query_validator_rewards.rs  user_action.rs  utils.rs  validator_action.rs
