[package]
name = "bos-post-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

gql_client = "1.0.7"

itertools = "0.10.0"
serde = "1.0.188"
serde_json = "1.0.107"
dirs = "3.0"

clap="4.3.24"
clap_lex="0.5.0"
chrono = "0.4.31"

near-units = "0.2.0"
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs.git", rev = "fb0be84133b4ac74f35bdd71477fa74bc1240c2e" }
near-crypto = "0.19.0"
near-primitives = "0.19.0"
near-jsonrpc-primitives = "0.19.0"
xlsxwriter = "0.6.0"

[dependencies.near-gas]
version = "0.2.3"
features = [
    "serde",
    "borsh",
    "schemars",
]
